<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    
	<item
        android:id="@+id/action_nuevo_cliente"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/agregar"
        android:icon="@drawable/ic_person_add_white_24dp"/>"
    
    <item 
        android:id="@+id/action_editar_cliente"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/editar"
        android:icon="@drawable/ic_mode_edit_white_24dp"/>
    
    <item 
        android:id="@+id/action_eliminar_cliente"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/eliminar"
        android:icon="@drawable/ic_delete_white_24dp"/>
    
    <item 
        android:id="@+id/action_listo_cliente"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/listo"
        android:icon="@drawable/ic_done_white_24dp"/>
    
    <item 
        android:id="@+id/action_nuevo_prod"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/agregar"
        android:icon="@drawable/ic_add_circle_outline_white_36dp"/>
    
</menu>
