<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="2dp">

        <TextView
            android:id="@+id/tvAvisoEnviarInformeVentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/hello_world"
            android:padding="3dp"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <EditText
                android:id="@+id/etEmailEnviarInformeVentas"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:hint="Introduzca e-mail"
                android:inputType="textEmailAddress"
                android:maxLength="35" />

	        <ImageButton
	            android:id="@+id/ibtnAgregarEmailEnviarInformeVentas"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_edit_black_36dp"
	            android:background="@drawable/custom_view_button"
	            android:padding="2dp" />
        
        </LinearLayout>
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:gravity="right|center_vertical"
            android:layout_margin="2dp">

            <Button
                android:id="@+id/btnCancelarEnviarInformeVentas"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/cancelar" 
                android:textColor="@android:color/black"
                android:padding="5dp"
				android:background="@drawable/custom_view_button"
				android:layout_marginRight="3dp"/>

            <Button
                android:id="@+id/btnAceptarEnviarInformeVentas"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/enviar_info"
                android:textColor="@android:color/black"
                android:padding="5dp"
				android:background="@drawable/custom_view_button"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
