<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/ivImagenDetalleProd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:padding="10dp"
            android:background="@drawable/custom_imageview"
            android:src="@drawable/ic_product_plant_128" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="Producto"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvNombreProdDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" 
                android:text="Arena"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
        </LinearLayout>
        
       	<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
       	    <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="Precio"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvPrecioDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" 
                android:text="300 Bs"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
       	</LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="Unidad"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvUnidadDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" 
                android:text="M3"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
       	</LinearLayout>
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="Descripcion"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvDescripcionDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" 
                android:text="Arena de primera calidad"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
       	</LinearLayout>
            
        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" 
            android:layout_margin="2dp">

            <Button
                android:id="@+id/btnEliminarDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginRight="3dp"
                android:drawableRight="@drawable/ic_delete_white_24dp"
                android:text="@string/eliminar"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_view_button"
                android:padding="5dp" 
                style="?android:attr/buttonStyleSmall"/>

            <Button
                android:id="@+id/btnEditarDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginRight="3dp"
                android:drawableRight="@drawable/ic_mode_edit_white_24dp"
                android:text="@string/editar"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_view_button"  
                android:padding="5dp"
                style="?android:attr/buttonStyleSmall"/>

            <Button
                android:id="@+id/btnOkDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableRight="@drawable/ic_done_white_24dp"
                android:text="@string/ok_info"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_view_button"
                android:padding="5dp"  
                style="?android:attr/buttonStyleSmall"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
