<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:id="@+id/ivImagenDetalleMaquinaria"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_local_shipping_white_48dp" 
            android:layout_gravity="center"
            android:padding="15dp"
            android:scaleType="centerCrop"
            android:background="@drawable/custom_imageview"/>
	
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placa"
                android:paddingTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvPlacaDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123SIL"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descripcion"
                android:paddingTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvDescripcionDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monta carga"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Capacidad"
                android:paddingTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvCapacidadDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4 cubos" 
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
       	</LinearLayout>
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marca"
                android:paddingTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

            <TextView
                android:id="@+id/tvMarcaDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cater Pillar"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>
       	</LinearLayout>
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_margin="1dp"
            android:background="@drawable/custom_view_layout">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Color"
                android:paddingTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>

            <TextView
                android:id="@+id/tvColorDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amarrilo/Negro"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" 
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>
       	</LinearLayout>
       	
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp"
            android:gravity="right|center_vertical">
            
            <Button
                android:id="@+id/btnEliminarDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableRight="@drawable/ic_delete_white_24dp"
                android:layout_marginRight="3dp"
                android:text="@string/eliminar"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_view_button"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>
            
            <Button
                android:id="@+id/btnEditarDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableRight="@drawable/ic_mode_edit_white_24dp"
                android:layout_marginRight="3dp"
                android:text="@string/editar"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_view_button"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>
            
            <Button
                android:id="@+id/btnOkDetalleMaquinaria"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:drawableRight="@drawable/ic_done_white_24dp"
                android:text="@string/ok_info"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_view_button"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>
