<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:padding="5dp">
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <ImageView 
                android:id="@+id/ivImagenNuevoCliente"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                android:padding="5dp"
                android:src="@drawable/ic_client_128"
                android:background="@drawable/custom_imageview"/>
            
            <LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_marginLeft="2dp">
	            
                <EditText 
                    android:id="@+id/etCINuevoCliente"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="CI o NIT"
                	android:inputType="number" 
                    android:maxLength="10"
                    android:drawableRight="@drawable/ic_no_value_24">
                	<requestFocus />  
                </EditText>
                
                <EditText 
                    android:id="@+id/etNombreNuevoCliente"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre"
              		android:inputType="textCapWords"
              		android:layout_marginTop="2dp"
                    android:maxLength="20">
                </EditText>
                
	        </LinearLayout>
            
        </LinearLayout>

        <EditText
            android:id="@+id/etApellidoNuevoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="Apellido"
            android:layout_marginTop="2dp"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etDireccionNuevoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dirección"
            android:maxLength="35"
            android:layout_marginTop="2dp"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/etTelfNuevoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telf."
            android:maxLength="10"
            android:layout_marginTop="2dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etEmailNuevoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_marginTop="2dp"
            android:inputType="textEmailAddress" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <RadioGroup 
	            android:id="@+id/rdgSexoNuevoCliente"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal"
	            android:layout_marginTop="5dp">
	            
	            <RadioButton
		            android:id="@+id/rdbMasculinoNuevoCliente"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/masculino" 
		            />
	            
	            <RadioButton
		            android:id="@+id/rdbFemeninoNuevoCliente"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/femenino" />
	            
	        </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha de nacimiento"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|center">
	            
                <TextView
	                android:id="@+id/tvFechaNacNuevoCliente"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Sin especificar" />
	
	            <ImageView
	                android:id="@+id/ivFechaNacNuevoCliente"
	                android:layout_width="30dp"
	                android:layout_height="30dp"
	                android:layout_marginLeft="5dp"
	                android:src="@drawable/ic_event_white_24dp" 
	                android:background="@drawable/custom_view_button"/>
	            
	        </LinearLayout>
	        
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="3dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha de registro"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|center">
	            
                <TextView
	                android:id="@+id/tvFechaRegNuevoCliente"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Fecha de registro" />
	
	            <ImageView
	                android:id="@+id/ivFechaRegNuevoCliente"
	                android:layout_width="30dp"
	                android:layout_height="30dp"
	                android:layout_marginLeft="5dp"
	                android:src="@drawable/ic_event_white_24dp" 
	                android:background="@drawable/custom_view_button"/>
            
	        </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnAceptarNuevoCliente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" 
            android:layout_marginTop="2dp"
            android:textColor="@android:color/black"
            android:background="@drawable/custom_view_button"/>

    </LinearLayout>
</ScrollView>
